Updated HW24 - changed description in 24.4.

--- a/Урок 21-27. Строки. Списки/Python - HW24.html
+++ b/Урок 21-27. Строки. Списки/Python - HW24.html
@@ -247,7 +247,7 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 24.4</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span> и <span class="hl-text">выводит в консоль</span> <span class="string"><b>"Строка является палиндромом."</b></span> или <span class="string"><b>"Строка не является палиндромом."</b></span> <span class="hl-text">в зависимости от строки</span>. Палиндром — слово или текст, которое читается одинаково <span class="hl-text">слева направо</span> и <span class="hl-text">справа налево</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span> и <span class="hl-text">выводит в консоль</span> <span class="string"><b>"Строка является палиндромом."</b></span> или <span class="string"><b>"Строка не является палиндромом."</b></span> <span class="hl-text">в зависимости от строки</span>. Палиндром — слово или текст, которое читается одинаково <span class="hl-text">слева направо</span> и <span class="hl-text">справа налево</span>. Считайте, что строка будет на русском языке.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите строку: <span class="input">А роза упала на лапу Азора</span>
