Updated PT26 - fixed console.

--- a/Урок 21-27. Строки. Списки/Python - PT26.html
+++ b/Урок 21-27. Строки. Списки/Python - PT26.html
@@ -120,7 +120,8 @@
 5. Изменить оценку по индексу
 6. Определить количество оценок
 7. Определить среднюю оценку
-8. Определить медианную оценку</code></pre>
+8. Определить медианную оценку
+9. Завершить программу</code></pre>
         </div>
         </p>
 
