Updated HW26 - changed console 26.3.

--- a/Урок 21-27. Строки. Списки/Python - HW26.html
+++ b/Урок 21-27. Строки. Списки/Python - HW26.html
@@ -299,6 +299,7 @@
 Введите имя: <span class="input">Jim</span>
 Введите имя: <span class="input">Teston</span>
 Введите имя: <span class="input">Arthur</span>
+Введите имя:
 
 Имена сотрудников: Kate, Jack, Bob, Jim, Teston, Arthur
 Оставшиеся сотрудники: Kate, Bob, Teston</code></pre>
