--- a/Урок 28-34. Функции. Модули/Python - HW28.html
+++ b/Урок 28-34. Функции. Модули/Python - HW28.html
@@ -206,7 +206,7 @@ X - занятые места
 _ - свободные места</code></pre>
         </div>
         <p>Затем программа <span class="hl-text">снова показывает главное меню<span>.</p>
-        <p>При выборе <span class="hl-text">пункта 2</span> программа <span class="hl-text">запрашивает с консоли ряд</span> и <span class="hl-text">колонку</span>. Если место свободно, то программа должна в<span class="hl-text">ывести в консоль</span> <span class="string"><b>"Место успешно забронировано."</b></span>. В противном случае должна <span class="hl-text">вывести</span> <span class="string"><b>"Место уже занято. Пожалуйста, выберите другое место."</b></span> и после этого программа будет <span class="hl-text">предлагать забронировать место до тех пор, пока не выберется свободное место</span> или же <span class="hl-text">не будут введены пустые строки</span>. После этого программа <span class="hl-text">возвращается в главное меню</span>.</p>
+        <p>При выборе <span class="hl-text">пункта 2</span> программа <span class="hl-text">запрашивает с консоли ряд</span> и <span class="hl-text">колонку</span>. Если место свободно, то программа должна <span class="hl-text">вывести в консоль</span> <span class="string"><b>"Место успешно забронировано."</b></span>. В противном случае должна <span class="hl-text">вывести</span> <span class="string"><b>"Место уже занято. Пожалуйста, выберите другое место."</b></span> и после этого программа будет <span class="hl-text">предлагать забронировать место до тех пор, пока не выберется свободное место</span> или же <span class="hl-text">не будут введены пустые строки</span>. После этого программа <span class="hl-text">возвращается в главное меню</span>.</p>
         <p>После успешного бронирования <span class="hl-text">пункт 1 должен отобразить новые бронирования</span>.</p>
       </div>
       <div class="right-rect">
@@ -248,7 +248,7 @@ number = randint(start, end)  # Использование функции для
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 28.7</h2>
-        <p>Напишите функцию <span class="function"><b>has_alpha_eng</b></span>, которая <span class="hl-text">принимает строку</span> и <span class="hl-text">возвращает</span> <code class="python"><b>True</b></code>, если в строке есть английские буквы, и <span class="python"><b>False</b></code> в противном случае.</p>
+        <p>Напишите функцию <span class="function"><b>has_alpha_eng</b></span>, которая <span class="hl-text">принимает строку</span> и <span class="hl-text">возвращает</span> <code class="python"><b>True</b></code>, если в строке есть английские буквы, и <code class="python"><b>False</b></code> в противном случае.</p>
 
         <p>Затем напишите программу, которая <span class="hl-text">использует эту функцию</span>. Если функция возвращает <code class="python"><b>True</b></code>, то программа должна <span class="hl-text">выводить в консоль</span> <span class="string"><b>"В строке содержатся английские буквы."</b></span>. В противном случае программа должна выводить в консоль <span class="string"><b>"В строке отсутствуют английские буквы."</b></span>.</p>
 
