Updated HW28 - fixed description in 28.5 and 28.6.

--- a/Урок 28-34. Функции. Модули/Python - HW28.html
+++ b/Урок 28-34. Функции. Модули/Python - HW28.html
@@ -229,7 +229,7 @@ if you do so, you are insulting yourself."
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 28.5</h2>
-        <p>Напишите функцию <span class="function"><b>generate_list</b></span>, которая <span class="hl-text">принимает размер</span>, <span class="hl-text">начало</span> и <span class="hl-text">конец диапазона</span>, затем <span class="hl-text">формирует список по параметрам</span> и <span class="hl-text">возвращает результат</span>.</p>
+        <p>Напишите функцию <span class="function"><b>generate_list</b></span>, которая <span class="hl-text">принимает размер списка</span>, <span class="hl-text">начало</span> и <span class="hl-text">конец диапазона чисел</span>, затем <span class="hl-text">формирует список по параметрам</span> и <span class="hl-text">возвращает результат</span>.</p>
         <h3>Подсказка:</h3>
         <p>Используйте следующий код для генерации числа:</p>
         <div class="console">
@@ -244,7 +244,7 @@ number = randint(start, end)  # Использование функции для
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 28.6</h2>
-        <p>Напишите функцию <span class="function"><b>get_indexes</b></span>, которая <span class="hl-text">принимает список</span> и <span class="hl-text">элемент для поиска</span>, затем <span class="hl-text">ищет элементы в списке</span> и <span class="hl-text">добавляет в новый список найденные индексы</span>. После этого <span class="hl-text">возвращает полученный список</span>.</p>
+        <p>Напишите функцию <span class="function"><b>get_indexes</b></span>, которая <span class="hl-text">принимает список</span> и <span class="hl-text">элемент для поиска</span>, затем <span class="hl-text">ищет элементы в списке</span> и <span class="hl-text">добавляет в новый список найденные индексы</span>. После этого <span class="hl-text">возвращает полученный список с найденными индексами</span>.</p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 28.7</h2>
