Updated HW24 - changed 24.3 and 24.6.

--- a/Урок 21-27. Строки. Списки/Python - HW24.html
+++ b/Урок 21-27. Строки. Списки/Python - HW24.html
@@ -213,7 +213,7 @@
     <div class="right-block">
       <div class="right-rect">
         <h2><strong>Примечание</strong></h2>
-        <p>Оформляйте ввод и вывод данных в соответствии с примерами заданий. Используйте только то, что было пройденно до этого урока включительно. Не используйте в условии оператор <code class="python"><b>in</b></code>. Не используйте готовые методы, только если в заданиях не говорится об использовании тех или иных методов. Не используйте срезы.</p>
+        <p>Оформляйте ввод и вывод данных в соответствии с примерами заданий. Используйте только то, что было пройденно до этого урока включительно. Не используйте в условии оператор <code class="python"><b>in</b></code> и конструкцию вида <code class="python"><b>('A' <= char <= 'Z') or ('a' <= char <= 'z')</b></code>. Не используйте готовые методы, только если в заданиях не говорится об использовании тех или иных методов. Не используйте срезы.</p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 24.1</h2>
@@ -237,12 +237,12 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 24.3</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span> и <span class="hl-text">выводит в консоль</span> <span class="string"><b>"В строке содержатся английские буквы."</b></span> или <span class="string"><b>"В строке отсутствуют английские буквы."</b></span> <span class="hl-text">в зависимости от строки</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span> и <span class="hl-text">выводит в консоль</span> <span class="string"><b>"В строке содержится символ из набора ACEIJOUWaceijouw5869#."</b></span> или <span class="string"><b>"В строке отсутствует символ из набора ACEIJOUWaceijouw5869#."</b></span> <span class="hl-text">в зависимости от строки</span>. Задачу нужно решить <span class="hl-text">вложенными циклами</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите строку: <span class="input">12345abc</span>
 
-В строке содержатся английские буквы.</code></pre>
+В строке содержится символ из набора ACEIJOUWaceijouw5869#.</code></pre>
         </div>
       </div>
       <div class="right-rect">
@@ -272,7 +272,7 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 24.6</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span> и <span class="hl-text">выводит в консоль</span> <span class="string"><b>"В строке присутствуют только английские буквы."</b></span> или <span class="string"><b>"В строке присутствуют не только английские буквы."</b></span> <span class="hl-text">в зависимости от строки</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span> и <span class="hl-text">выводит в консоль</span> <span class="string"><b>"В строке присутствуют только символы из набора ACEIJOUWaceijouw5869#."</b></span> или <span class="string"><b>"В строке присутствуют не только символы из набора ACEIJOUWaceijouw5869#."</b></span> <span class="hl-text">в зависимости от строки</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите строку: <span class="input">abc5de</span>
