Updated HW38 - fixed description in 38.5.

--- a/Урок 37-40. Кортежи. Множества. Словари/Python - HW38.html
+++ b/Урок 37-40. Кортежи. Множества. Словари/Python - HW38.html
@@ -351,7 +351,7 @@
  <span class="string">"Идентификатор"</span>: {<span class="string">"title"</span>: <span class="string">"Название"</span>, <span class="string">"author"</span>: <span class="string">"Имя"</span>, <span class="string">"genre"</span>: <span class="string">"Жанр"</span>, <span class="string">"release_year"</span>: <span class="number"><год></span>},
  ...}</code></pre>
             </div>
-            Вместе с этим переделайте операции <span class="hl-text">вывода книг</span>, <span class="hl-text">поиска</span>, <span class="hl-text">добавления</span>, <span class="hl-text">изменения></span> и <span class="hl-text">удаления книг</span>.
+            Вместе с этим переделайте операции <span class="hl-text">вывода книг</span>, <span class="hl-text">поиска</span>, <span class="hl-text">добавления</span>, <span class="hl-text">изменения</span> и <span class="hl-text">удаления книг</span>.
           </li>
         </ol>
       </div>
